# fruity-chat

./: Cargo.toml
.github/workflows/: release.yml
src/: fruit.rs  main.rs  message.rs  ticket.rs
