[package]
name = "fruity-chat"
authors = ["Aaron Askew <aaronaskew@gmail.com>"]
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.10"
anyhow = "1"
iroh = "1"
tokio = "1"
iroh-gossip = "0.101"
futures-lite = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
data-encoding = "2"
clap = { version = "4.6.1", features = ["derive"] }
iroh-services = "1.0.0"
